# xarray_jax

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  example.ipynb  mask_examples.ipynb  pyproject.toml  tree_manip_issue.ipynb
.github/workflows/: lint.yml  run_tests.yml
tests/: test_diffrax.py  test_readme_examples.py  test_tree_manips.py  test_types.py  test_wrap_jax_array.py
xarray_jax/: __init__.py  custom_types.py  register_pytrees.py  register_pytrees_pure_xr.py  register_pytrees_xj.py  structs.py  types.py
xarray_jax/tests/: strategies.py  test_readme_examples.py  test_types.py
