[tool.poetry]
name = "xarray-jax"
version = "0.1.0"
description = ""
authors = ["Allen Wang <allenw@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xarray = {path = "./submodules/xarray", develop = true}
jax = "0.4.31"
equinox = "^0.11.5"
diffrax = "^0.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
